--- a/public/css/templatemo-style.css
+++ b/public/css/templatemo-style.css
@@ -849,6 +849,13 @@ address {
   transition: max-height 0.2s ease-out;
 }
 
+.panel.show {
+  background-color: white;
+  max-height: 200px;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+
 .panel p {
   padding: 5px 20px 30px;
 }
