--- a/public/css/templatemo-style.css
+++ b/public/css/templatemo-style.css
@@ -201,6 +201,18 @@ body {
 
 .container {
   background-color: white;
+  animation: fadeInAnimation ease 2s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeInAnimation {
+  0% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
+   }
 }
 
 p, address {
@@ -302,6 +314,49 @@ p, address {
   padding-left: 25px;
 }
 
+.tm-nav-dropdown {
+  position:absolute;
+  top: calc(100%+5px);
+  left: calc(100%+5px);
+  background-color: #ffffff;
+  display: none;
+  padding: 10px;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  opacity: 90%;
+  animation: fadeInAnimation ease 1s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeInAnimation {
+  0% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
+   }
+}
+
+.tm-nav-li:hover .tm-nav-dropdown {
+  display: block;
+}
+
+.tm-nav-dropdown a {
+  display: block;
+  color: #333333;
+  padding: 8px 12px;
+  text-decoration: none;
+  text-align: left;
+  transition: background-color 0.3s ease;
+}
+
+.tm-nav-dropdown a:hover {
+  color: white;
+  background-color:  rgb(165, 147, 48);
+}
+
+
 @media (max-width: 991px) {
   .tm-nav-li {
     padding-right: 15px;
@@ -315,7 +370,8 @@ p, address {
   padding-bottom: 10px;
 }
 
-.tm-nav-link.active,
+/*
+.tm-nav-link.active,*/
 .tm-nav-link:hover {
   border-bottom: 1px solid white;
 }
@@ -410,7 +466,7 @@ p, address {
 
 .tm-gallery-price {
   font-size: 1.25rem;
-  color: #2F956D;
+  color: rgb(165, 147, 48);
   margin-bottom: 60px;
 }
 
@@ -422,7 +478,7 @@ p, address {
 .tm-paging-item {
   list-style: none;
   display: inline-block;
-  border: 1px solid #2F956D;
+  border: 1px solid rgb(165, 147, 48);
   margin: 7px;
 }
 
@@ -433,13 +489,13 @@ p, address {
   align-items: center;
   justify-content: center;
   text-decoration: none;
-  color: #2F956D;
+  color: rgb(165, 147, 48);
   background-color: transparent;
 }
 
 .tm-paging-link.active,
 .tm-paging-link:hover {
-  background-color: #2F956D;
+  background-color: rgb(165, 147, 48);
   color: white;
 }
 
