feature:add new style

--- a/public/css/templatemo-style.css
+++ b/public/css/templatemo-style.css
@@ -38,6 +38,11 @@ html {
   padding-left: 15px;
   padding-right: 15px;
 }
+.tm-container-inner-3 {
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 100px;
+}
 
 .row {
   display: -ms-flexbox;
